--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <header>
         <div id="profile">
-            <img src="C:\Users\Juan\Desktop\Portafolio\img\DSC_0184.JPG" alt="Tu Foto">
+            <img src="https://github.com/Juancdelarosa/Mi_Portafolio/blob/main/img/DSC_0184.JPG" alt="Tu Foto">
             <h1>Juan Carlos De la Rosa Concepción.</h1>
         </div>
     </header>
