--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="contact-info">
         <h2>Información de Contacto</h2>
         <ul>
-            <li><img src="img\cellphone_79786.png" alt="Teléfono"> 829-693-5935</li>
+            <li><img src="img\cellphone_79786.jpg" alt="Teléfono"> 829-693-5935</li>
             <li><img src="img\mail_email_message_electronic_online_web_icon-icons.com_59986.png" alt="Correo Electrónico"> juancdelarosa2710@gmail.com</li>
             <li><img src="img\home_icon-icons.com_73532.png" alt="Ubicación"> C. Francisco Castillo Marquez #21, apartamento #3.</li>
         </ul>
